# etoro_statement

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  etoro_summary.py  pyproject.toml  requirements-lock.txt  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deps-refresh.yml  sonarcloud.yml
tests/: test_etoro_summary.py
